--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -259,17 +259,25 @@ div.skip {
     text-align: left;
     clear: both;
 
-    .btn-primary,
-    .btn-primary:hover {
-      color: #fff;
+    .btn-primary {
+      color: #fff !important;
+      background-color: #333 !important;
+      border-color: #333 !important;
+    }
+
+    .btn-primary:hover,
+    .btn-primary:active {
+      color: #333 !important;
+      background-color: #fff !important;
+      border-color: #333 !important;
     }
 
     .btn-default,
     .btn-default:hover,
     .btn-default:active {
-      border: none;
-      background: none;
-      color: #333;
+      border: none !important;
+      background: none !important;
+      color: #333 !important;
     }
   }
 
