--- a/app/views/fulcrum/_sidebar.html.erb
+++ b/app/views/fulcrum/_sidebar.html.erb
@@ -10,7 +10,7 @@
   <li <%= "class=active" if partials.to_s == :logs.to_s %>><a href="<%= main_app.fulcrum_partials_path(partials: :logs) %>"><span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span> Logs</a></li>
   <li <%= "class=active" if partials.to_s == :grants.to_s %>><a href="<%= main_app.fulcrum_partials_path(partials: :grants) %>"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Grants</a></li>
   <li <%= "class=active" if partials.to_s == :books.to_s %>><a href="<%= main_app.fulcrum_partials_path(partials: :monographs) %>"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Monographs</a></li>
-  <li <%= "class=active" if partials.to_s == :items.to_s %>><a href="<%= main_app.fulcrum_partials_path(partials: :assets) %>"><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Assets</a></li>
+  <li <%= "class=active" if partials.to_s == :items.to_s %>><a href="<%= main_app.fulcrum_partials_path(partials: :resources) %>"><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Resources</a></li>
   <li <%= "class=active" if partials.to_s == :pages.to_s %>><a href="<%= main_app.fulcrum_partials_path(partials: :pages) %>"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Pages</a></li>
   <li <%= "class=active" if partials.to_s == :reports.to_s %>><a href="<%= main_app.fulcrum_partials_path(partials: :reports) %>"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> Reports</a></li>
   <li <%= "class=active" if partials.to_s == :csv.to_s %>><a href="<%= main_app.fulcrum_partials_path(partials: :csv) %>"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> CSV</a></li>
