--- a/app/views/fulcrum/_institutions.html.erb
+++ b/app/views/fulcrum/_institutions.html.erb
@@ -23,7 +23,7 @@
         <div></div>
       </th>
       <th>
-        <div>Products</div>
+        <div>Licenses</div>
         <div>&nbsp;</div>
         <div><button name="submit" type="submit" value="filter">Filter</button></div>
       </th>
@@ -40,7 +40,7 @@
           <div><%= institution.name %>&nbsp;</div>
           <div><%= institution.entity_id %>&nbsp;</div>
         </td>
-        <td><%= institution.products.count %></td>
+        <td><%= institution.licenses.count %></td>
       </tr>
     <% end %>
   </table>
