HELIO-3286 - moving csb to webpack in heliotrope

--- a/app/views/layouts/mozilla-pdf-viewer.html.erb
+++ b/app/views/layouts/mozilla-pdf-viewer.html.erb
@@ -4,7 +4,9 @@
     <%= content_for?(:head) ? yield(:head) : yield %>
     <!-- CSS -->
     <%= stylesheet_link_tag 'mozilla-pdf-viewer' %>
+    <%= stylesheet_pack_tag 'cozy-sun-bear/cozy-sun-bear' %>
     <!-- Javascript -->
+    <%= javascript_pack_tag 'cozy-sun-bear/cozy-sun-bear' %>
     <%= javascript_include_tag 'mozilla-pdf-viewer' %>
   </head>
   <body id="outerContainer">
