--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -180,4 +180,4 @@ webgl = Webgl::Unity.from_directory(UnpackService.root_path_from_noid(webgl_id, 
   <% end %>
   <%= render 'shared/ga' %>
 <% end %>
-<%= render template: 'layouts/boilerplate' %>
+<%= render template: 'layouts/csb_viewer' %>
