Change TrialLicense to ReadLicense

--- a/app/views/grants/_form.html.erb
+++ b/app/views/grants/_form.html.erb
@@ -120,7 +120,7 @@
         <label for="grant_credential_license_id">
           <select name="grant[credential_license_id]" id="grant_credential_license_id">
             <option value="full">full</option>
-            <option value="trial">trial</option>
+            <option value="read">read</option>
           </select>
         </label>
       </div>
