--- a/app/views/greensub/licenses/_form.html.erb
+++ b/app/views/greensub/licenses/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :type, collection: ['Greensub::FullLicense', 'Greensub::TrialLicense'] %>
+    <%= f.input :type, collection: ['Greensub::FullLicense', 'Greensub::ReadLicense'] %>
   </div>
 
   <div class="form-actions">
