--- a/app/assets/stylesheets/embed/embed_styles.scss
+++ b/app/assets/stylesheets/embed/embed_styles.scss
@@ -48,10 +48,12 @@ html {
       opacity: 0.4;
       filter: alpha(opacity=40);
       background-color: #555;
+      color: #fdfdfd !important;
     }
     .able-big-play-button:hover {
       opacity: .7;
       filter: alpha(opacity=70);
+      color: #fdfdfd !important;
     }
 
     // HELIO-3674
