--- a/app/views/grants/_form.html.erb
+++ b/app/views/grants/_form.html.erb
@@ -37,10 +37,11 @@
         </label>
       </div>
       <div class="col-md-1">
-        <label for="grant_agent_type_any">
-          <input type="radio" value="any" name="grant[agent_type]" id="grant_agent_type_any" />
-          <label class="collection_radio_buttons" for="grant_agent_type_any">Any</label>
-        </label>
+        &nbsp;
+<!--        <label for="grant_agent_type_any">-->
+<!--          <input type="radio" value="any" name="grant[agent_type]" id="grant_agent_type_any" />-->
+<!--          <label class="collection_radio_buttons" for="grant_agent_type_any">Any</label>-->
+<!--        </label>-->
       </div>
     </div>
     
@@ -74,10 +75,11 @@
         </div>
       </div>
       <div class="col-md-1">
-        <label for="grant_agent_id_any">
-          <input type="checkbox" value="any" name="grant[agent_id]" id="grant_agent_id_any" />
-          <label class="collection_radio_buttons" for="grant_agent_id_any">Any</label>
-        </label>
+        &nbsp;
+<!--        <label for="grant_agent_id_any">-->
+<!--          <input type="checkbox" value="any" name="grant[agent_id]" id="grant_agent_id_any" />-->
+<!--          <label class="collection_radio_buttons" for="grant_agent_id_any">Any</label>-->
+<!--        </label>-->
       </div>
     </div>
 
@@ -133,10 +135,11 @@
       </div>
       <div class="col-md-4">&nbsp;</div>
       <div class="col-md-1">
-        <label for="grant_credential_id_any">
-          <input type="checkbox" value="any" name="grant[credential_id]" id="grant_credential_id_any" />
-          <label class="collection_radio_buttons" for="grant_credential_id_any">Any</label>
-        </label>
+        &nbsp;
+<!--        <label for="grant_credential_id_any">-->
+<!--          <input type="checkbox" value="any" name="grant[credential_id]" id="grant_credential_id_any" />-->
+<!--          <label class="collection_radio_buttons" for="grant_credential_id_any">Any</label>-->
+<!--        </label>-->
       </div>
     </div>
 
@@ -168,10 +171,11 @@
         </label>
       </div>
       <div class="col-md-1">
-        <label for="grant_resource_type_any">
-          <input type="radio" value="any" name="grant[resource_type]" id="grant_resource_type_any" />
-          <label class="collection_radio_buttons" for="grant_resource_type_any">Any</label>
-        </label>
+        &nbsp;
+<!--        <label for="grant_resource_type_any">-->
+<!--          <input type="radio" value="any" name="grant[resource_type]" id="grant_resource_type_any" />-->
+<!--          <label class="collection_radio_buttons" for="grant_resource_type_any">Any</label>-->
+<!--        </label>-->
       </div>
     </div>
 
@@ -200,10 +204,11 @@
         </div>
       </div>
       <div class="col-md-1">
-        <label for="grant_resource_id_any">
-          <input type="checkbox" value="any" name="grant[resource_id]" id="grant_resource_id_any" />
-          <label class="collection_radio_buttons" for="grant_resource_id_any">Any</label>
-        </label>
+        &nbsp;
+<!--        <label for="grant_resource_id_any">-->
+<!--          <input type="checkbox" value="any" name="grant[resource_id]" id="grant_resource_id_any" />-->
+<!--          <label class="collection_radio_buttons" for="grant_resource_id_any">Any</label>-->
+<!--        </label>-->
       </div>
     </div>
   </div>
