--- a/app/views/hyrax/file_sets/_media_embedded.html.erb
+++ b/app/views/hyrax/file_sets/_media_embedded.html.erb
@@ -6,9 +6,9 @@
   <div class="fulcrum-embed-link<%= ' audio no-transcript' if @presenter.audio_without_transcript? %>">
     <%# note embed_fulcrum_logo_title is double-quoted, <base target="_blank"> in embedded.html.erb doesn't work here %>
     <a href="<%= @presenter.embed_fulcrum_logo_link %>"
-       title='<%= @presenter.embed_fulcrum_logo_title %>'
+       aria-label='<%= @presenter.embed_fulcrum_logo_title %>'
        target="_blank">
-      <%= image_tag "fulcrum-white-50px.png", class: 'logo', alt: @presenter.embed_fulcrum_logo_alt %>
+      <%= image_tag "fulcrum-logo-circle.png", class: 'logo', alt: 'Fulcrum logo' %>
     </a>
   </div>
   <div class="fulcrum-media-wrapper<%= ' audio no-transcript' if @presenter.audio_without_transcript? %>">
