Remove deprecated Sighrax models

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -1063,7 +1063,7 @@ footer.press {
     width: 100% !important;
   }
 
-  // non-Leaflet Asset page image (PDF thumbnails etc)
+  // non-Leaflet Resource page image (PDF thumbnails etc)
   .asset-page-image {
     margin: auto;
   }
