--- a/app/views/fulcrum/_jobs.html.erb
+++ b/app/views/fulcrum/_jobs.html.erb
@@ -134,7 +134,7 @@
   </div>
   <div class="row">
     <%= link_to(fulcrum_exec_path(:reindex_file_sets), method: :get, class: "btn btn-default", data: { confirm: 'Are you sure?' }) do %>
-      <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Reindex Assets
+      <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Reindex Resources
     <% end %>
   </div>
 </div>
