--- a/app/views/hyrax/file_sets/media_display/_static_image.html.erb
+++ b/app/views/hyrax/file_sets/media_display/_static_image.html.erb
@@ -1,6 +1,6 @@
 <%# need original animated GIF file for proper display, otherwise use image-service (Chrome and FF cannot display TIFFs at all!) %>
 <% image_path = file_set.animated_gif? ? hyrax.download_path(file_set) : "/image-service/#{file_set.id}#{file_set.browser_cache_breaker}/full/full/0/default.png" %>
-<% if @entity_policy.download? %>
+<% if @resource_download_operation_allowed %>
   <%= link_to image_path, target: "_new", title: file_set.download_button_label do %>
     <%= image_tag image_path,
                   class: "img-responsive asset-page-image no-context-menu-or-drag",
