HELIO-3658 - adjust width of parent div for image to make spacing consistent across aspect ratios

--- a/app/assets/stylesheets/embed/embed_styles.scss
+++ b/app/assets/stylesheets/embed/embed_styles.scss
@@ -93,7 +93,7 @@ html {
   top: 0;
   right: 0;
   float: right;
-  width: 4%;
+  width: auto;
   min-width: 25px;
   height: auto;
   // able div has a z-index of 5000
