--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -75,6 +75,10 @@
   }
 }
 
+.alert-message {
+  text-align: center;
+}
+
 ///////////////////////////////////
 // COLORS
 ///////////////////////////////////
