--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -1,30 +1,39 @@
 <div id="maincontent" class="row monograph-info-epub">
   <% if @presenter.monograph_coins_title? %>
-      <!-- COinS for Zotero, etc -->
-      <span class="Z3988" title="<%= @presenter.monograph_coins_title %>" aria-hidden="true"></span>
+    <!-- COinS for Zotero, etc -->
+    <span class="Z3988" title="<%= @presenter.monograph_coins_title %>" aria-hidden="true"></span>
+  <% end %>
+  <% if @presenter.tombstone? %>
+    <div class="alert alert-danger alert-message">
+      <%= render_markdown @presenter.monograph_tombstone_message %>
+    </div>
   <% end %>
   <div class="col-sm-3 monograph-cover">
-    <% if @presenter.representative_id.present? %>
-      <!-- Image trigger modal -->
-      <button type="button" class="btn btn-link" aria-label="Select to enlarge cover" data-toggle="modal" data-target="#modalImage">
-        <%= @presenter.thumbnail_tag(225, class: "img-responsive", alt: "Cover image for #{@presenter.title}") %>
-      </button>
-
-      <!-- Modal image -->
-      <div class="modal" id="modalImage" tabindex="-1" role="dialog" aria-label="Select the escape key to close the modal window">
-        <button type="button" class="close btn btn-default" id="modalClose" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <%= @presenter.poster_tag(tabindex: "-1", alt: '') %>
-      </div>
-
-      <script type="text/javascript">
-        $(document).on('turbolinks:load', function() {
-          $('#modalImage').on('shown.bs.modal', function () {
-            $('#modalClose').focus();
-          });
-        });
-      </script>
+    <% if @presenter.tombstone_thumbnail? %>
+      <%= @presenter.tombstone_thumbnail_tag(225) %>
     <% else %>
-      <%= @presenter.thumbnail_tag(225) %>
+      <% if @presenter.representative_id.present? %>
+        <!-- Image trigger modal -->
+        <button type="button" class="btn btn-link" aria-label="Select to enlarge cover" data-toggle="modal" data-target="#modalImage">
+          <%= @presenter.thumbnail_tag(225, class: "img-responsive", alt: "Cover image for #{@presenter.title}") %>
+        </button>
+
+        <!-- Modal image -->
+        <div class="modal" id="modalImage" tabindex="-1" role="dialog" aria-label="Select the escape key to close the modal window">
+          <button type="button" class="close btn btn-default" id="modalClose" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <%= @presenter.poster_tag(tabindex: "-1", alt: '') %>
+        </div>
+
+        <script type="text/javascript">
+          $(document).on('turbolinks:load', function() {
+            $('#modalImage').on('shown.bs.modal', function () {
+              $('#modalClose').focus();
+            });
+          });
+        </script>
+      <% else %>
+        <%= @presenter.thumbnail_tag(225) %>
+      <% end %>
     <% end %>
     <% if can? :edit, @presenter %>
       <a class="btn btn-default manage-monograph-button" href="<%= main_app.monograph_show_path(@presenter.id) %>" title="<%= t('monograph_catalog.index.show_page_button') %>" data-turbolinks="false"><%= t('monograph_catalog.index.show_page_button') %></a>
@@ -71,11 +80,11 @@
         <div class="btn-toolbar" role="toolbar">
           <div class="btn-group btn-group-lg" role="group">
             <% if @presenter.reader_ebook? %>
-              <% if @disable_read_button %>
+              <% if @disable_read_button || @presenter.tombstone? %>
                 <a id="monograph-read-btn"
                    href=""
-                   title="<%= t('monograph_catalog.index.read', title: @presenter.page_title) %>"
-                   aria-label="<%= t('monograph_catalog.index.read', title: @presenter.page_title) %>"
+                   title="<%= t('monograph_catalog.index.read_book') %>"
+                   aria-label="<%= t('monograph_catalog.index.read_book') %>"
                    class="btn btn-default"
                    data-turbolinks="false"
                    aria-disabled="true"
@@ -91,7 +100,7 @@
                 </a>
               <% end %>
             <% end %>
-            <% if @ebook_download_presenter.downloadable_ebooks? %>
+            <% if @ebook_download_presenter.downloadable_ebooks? && !@presenter.tombstone? %>
                 <div class="btn-group btn-group-lg">
                   <button type="button"
                           id="monograph-download-btn"
@@ -144,13 +153,15 @@
       <%= @presenter.attribute_to_html(:subject, html_dl: true, render_as: :catalog_facet_attribute,
                                                  subdomain: @presenter.subdomain) %>
 
-      <dt><%= t('citable_link') %></dt>
-      <dd>
-        <form>
-          <label for="permalink" style="display: none;"><%= t('citable_link') %></label>
-          <input type="text" class="form-control" id="permalink" aria-label="citable link" value="<%= @presenter.citable_link %>" readonly="readonly" onclick="this.select(); document.execCommand('copy');" />
-        </form>
-      </dd>
+      <% unless @presenter.tombstone? %>
+        <dt><%= t('citable_link') %></dt>
+        <dd>
+          <form>
+            <label for="permalink" style="display: none;"><%= t('citable_link') %></label>
+            <input type="text" class="form-control" id="permalink" aria-label="citable link" value="<%= @presenter.citable_link %>" readonly="readonly" onclick="this.select(); document.execCommand('copy');" />
+          </form>
+        </dd>
+      <% end %>
     </dl>
   </div>
 
