--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -8,7 +8,7 @@
   <% end %>
   <% if defined? @subdomain %>
     <%# only include hypothes.is for leverpress, um press and its subpresses at this point %>
-    <% if %w[leverpress michigan cjs cseas csas lrccs ummaa].include? @subdomain %>
+    <% if %w[leverpress michigan cjs cseas csas lrccs ummaa amherst].include? @subdomain %>
     <!-- hypothes.is -->
       <script type="text/javascript">
         window.hypothesisConfig = function () {
@@ -60,7 +60,7 @@ webgl = Webgl::Unity.from_directory(UnpackService.root_path_from_noid(webgl_id, 
     <script type="text/javascript">
       if ( true ) {
 
-        <% if %w[leverpress michigan cjs cseas csas lrccs ummaa].include? @subdomain %>
+        <% if %w[leverpress michigan cjs cseas csas lrccs ummaa amherst].include? @subdomain %>
           // Create custom annotator button that is aware of its state
           AnnotationTool = cozy.Control.Widget.Toggle.extend({
             defaultTemplate: '<button data-hypothesis-trigger class="button--sm annotation" data-toggle="button" aria-label="Open Annotations"><i class="fa fa-pencil" title="Open annotation panel" aria-hidden="true"></i></button><div class="annotation-count" data-hypothesis-annotation-count></div>',
@@ -138,7 +138,7 @@ webgl = Webgl::Unity.from_directory(UnpackService.root_path_from_noid(webgl_id, 
         <%= render "cozy_controls_bottom", presenter: @presenter, parent_presenter: @parent_presenter %>
 
         // Annotation widget checks and initialization
-        <% if %w[leverpress michigan cjs cseas csas lrccs ummaa].include? @subdomain %>
+        <% if %w[leverpress michigan cjs cseas csas lrccs ummaa amherst].include? @subdomain %>
           var tm;
           function checkForAnnotator(cb, w) {
             if (!w) {
