HELIO-3888 Log and Measure epub searches

--- a/app/views/fulcrum/_logs.html.erb
+++ b/app/views/fulcrum/_logs.html.erb
@@ -3,4 +3,5 @@
   <li><%= link_to "API Requests Log", api_requests_path %></li>
   <li><%= link_to "Crossref Submission Log", crossref_submission_logs_path %></li>
   <li><%= link_to "Share Link Log", share_link_logs_path %></li>
+  <li><%= link_to "Epub Search Logs", epub_search_logs_path %></li>
 </ul>
